fixed dark mode styling for contact me

--- a/css/contact.module.css
+++ b/css/contact.module.css
@@ -35,6 +35,26 @@
   transition: box-shadow 0.3s ease, transform 0.2s ease;
 }
 
+.contactContainer.synthwave .contactSubTitle {
+  color: #dedff2; /* Softer color for subtitles */
+}
+
+.contactContainer.synthwave .inputField,
+.contactContainer.synthwave .textareaField {
+  background-color: #212a38; /* Darker input background */
+  border-color: #6b7280; /* Subtle border */
+  color: #e5e7eb; /* Light text for input */
+}
+
+.contactContainer.synthwave .submitButton {
+  background-color: #ebedfe; 
+  color: #1d242e; 
+}
+
+.contactContainer.synthwave .contactForm {
+  background-color: #2b3242; 
+}
+
 .contactForm:hover {
   box-shadow: 0 6px 25px rgba(0, 0, 0, 0.15);
   transform: translateY(-5px);
@@ -64,7 +84,6 @@
   border-radius: 0.5rem;
   outline: none;
   background-color: #f9fafb;
-  transition: border-color 0.3s ease, background-color 0.3s ease;
 }
 
 .inputField:focus, .textareaField:focus {
@@ -88,7 +107,6 @@
   border: none;
   cursor: pointer;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 .submitButton:hover {
